Removed credentials from public repo

--- a/.gitignore
+++ b/.gitignore
@@ -55,10 +55,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+.env/
 
 # next.js build output
 .next
-
-# firebase credentials
-./src/app/models/creds.ts
